--- a/CompleteWeatherApp/CompleteWeatherApp.Android/Properties/AndroidManifest.xml
+++ b/CompleteWeatherApp/CompleteWeatherApp.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.completeweatherapp">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-    <application android:label="CompleteWeatherApp.Android" android:theme="@style/MainTheme"></application>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
+  <application
+    android:label="CompleteWeatherApp.Android"
+    android:usesCleartextTraffic="true"
+    android:theme="@style/MainTheme">
+  </application>
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
