--- a/CompleteWeatherApp/CompleteWeatherApp.Android/Properties/AndroidManifest.xml
+++ b/CompleteWeatherApp/CompleteWeatherApp.Android/Properties/AndroidManifest.xml
@@ -6,7 +6,7 @@
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
   <uses-permission android:name="android.permission.INTERNAET"/>
-  <user-feature android:name="android.hardware.location" android:required="false" />
+  <!--<user-feature android:name="android.hardware.location" android:required="false" />
   <user-feature android:name="android.hardware.location.gps" android:required="false" />
-  <user-feature android:name="android.hardware.location.network" android:required="false" />
+  <user-feature android:name="android.hardware.location.network" android:required="false" />-->
 </manifest>
